title spacing fix

--- a/static/css/global-styles.css
+++ b/static/css/global-styles.css
@@ -105,7 +105,7 @@ text-decoration: none;
 #home-title {
   text-align: center;
   font-size: 48px;
-  padding-top: 100px;
+  padding-top: 148px;
   line-height: 0;
 }
 
