--- a/static/css/header-footer.css
+++ b/static/css/header-footer.css
@@ -28,9 +28,6 @@ nav a:hover {
   color: #e3d0a8;
 }
 
-#logo {
-}
-
 #nav-bar {
   padding-top: 30px;
 }
